[tool.poetry]
name = "-lumos"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "_lumos"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.99.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
